<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">喜士多移动管理</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">账户</string>
    <string name="please_edit_account">请输入账户</string>
    <string name="password">密码</string>
    <string name="please_edit_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="openAu">为了正常使用请开启权限!</string>
    <string name="edit_idpwd">请输入正确的帐号与密码！</string>
    <string name="backup">暂无用处，备用</string>
    <string name="business">业务</string>
    <string name="two">查询</string>
    <string name="three">沟通</string>
    <string name="four">设置</string>
    <string name="loading">加载中，请稍后</string>
    <string name="loadingDone">加载完成</string>
    <string name="loadingError">加载失败</string>
    <string name="loadingUp">上拉加载更多</string>
    <string name="type_name">类名</string>
    <string name="type_name2">类别：</string>
    <string name="inventory">库存</string>
    <string name="inventory2">库存：</string>
    <string name="tonightCount">今晚到量</string>
    <string name="tonightCount2">今晚到量：</string>
    <string name="todayCount">今日订量</string>
    <string name="todayCount2">今日订量：</string>
    <string name="todayShort">今日订量排序</string>
    <string name="sure">确定</string>
    <string name="retry">点击重试</string>
    <string name="commodify_id">品号：</string>
    <string name="commodifyIdShort">品号排序</string>
    <string name="commodify_name">品名：</string>
    <string name="commodifyNameShort">品名排序</string>
    <string name="money">零售价:￥</string>
    <string name="moneyShort">售价排序</string>
    <string name="contract_buy">承包商品</string>
    <string name="writh_code">开发中</string>
    <string name="update_count">修改订量：</string>
    <string name="min_count">最小订量：</string>
    <string name="max_count">最大订量：</string>
    <string name="each_add_count">每次增量数</string>
    <string name="prompt_qrcode">将二维码/条码放入框内，即可自动扫描</string>
    <string name="prompt_code">扫描条形码请正对条形码扫描</string>
    <string name="prompt2_qrcode">可以通过上方扫描二维码或条形码查询商品，也可以通过下方手动输入查询商品</string>
    <string name="search">搜索</string>
    <string name="edit_cidorcname">在此输入品号或品名查询：</string>
    <string name="noMessage">未查询到内容</string>
    <string name="loadingMessage">此页面耗时极长，\n请耐心等候一分钟左右</string>
    <string name="lw_sales">上一周销量：</string>
    <string name="lw2_sales">上两周销量：</string>
    <string name="lw3_sales">上三周销量：</string>
    <string name="exp_sales">预测销量：</string>
    <string name="sug_sales">建议订量：</string>
    <string name="original_sales">原始订量：</string>
    <string name="real_count">实际订量：</string>
    <string name="original_sales2">原始订量</string>
    <string name="real_count2">实际订量</string>
    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="update_contract_prompt">未进行修改，不能保存！</string>
    <string name="noInternet">网络有问题，请查看联网状态并尝试刷新</string>
    <string name="nullhost">无host</string>
    <string name="socketError">请求出错</string>
    <string name="requestError">服务器连接超时，确定连在内网中，确定服务器正常</string>
    <string name="notFindIP">不能获得IP地址，请检查网络</string>
    <string name="pwdError">密码错误</string>
    <string name="idError">查询不到此帐号</string>
    <string name="haveBarCodeScrap">有条形码报废</string>
    <string name="noBarCodeScrap">无条形码报废</string>
    <string name="scrap">报废</string>
    <string name="flashlight">手电筒：</string>
    <string name="noScrap">无此商品</string>
    <string name="delete">删除</string>

    <string name="startScan">开始扫描:</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="onscan">扫描中</string>
    <string name="start_scan">开启扫描</string>
    <string name="strErrorSql">执行SQL出错</string>
    <string name="mrkCount">报废数</string>
    <string name="isScrap">是否已报废</string>
    <string name="submit_scrap">提交报废信息</string>
    <string name="store_mrk">商品报废</string>
    <string name="commodity">商品</string>

    <string name="store_photo">商形相机</string>
    <string name="commerce">商业</string>
    <string name="order">订货</string>
    <string name="train">培训</string>
    <string name="maintain">维修</string>
    <string name="coi">成本投资</string>
    <string name="idorname">品号/品名</string>
    <string name="tomorrow_count">(明日到量)</string>
    <string name="acquired_count">(后天到量)</string>

    <string name="other">其他</string>
    <string name="about">关于</string>
    <string name="declare">申明</string>
    <string name="update">更新</string>
    <string name="savePassword">记住密码:</string>
    <string name="saveId">记住帐号:</string>
    <string name="please_edit_ctb">请输入要搜索的品号或品名</string>
    <string name="system_error">系统错误，请联系开发人员</string>
    <string name="maxTNoAdd">已到当前类别最大订量，不能添加</string>
    <string name="maxCNoAdd">已到当前商品最大订量，不能添加</string>
    <string name="minTNoLess">已到当前类别最小订量，不能减少</string>
    <string name="minCNoLess">已到当前商品最小订量，不能减少</string>
    <string name="saveDone">保存成功</string>
    <string name="noEditMsg">无修改数据</string>
    <string name="isSave">已保存</string>
    <string name="qrcode_nomessage">二维码扫描器找不到目标</string>
    <string name="contract_order">承包商品订货</string>
    <string name="contract_order_toview">承包商品修改一览表</string>
    <string name="category_order">大类订货</string>
    <string name="shelf_order">货架订货</string>
    <string name="unit_order">单品订货</string>
    <string name="new_order">促销品及新品订货</string>
    <string name="supplies_order">自用品订货</string>
    <string name="store_order">门市订货</string>
    <string name="store_toview">门市订货查看</string>
    <string name="edit_sky">修改sku\n/sku总量</string>
    <string name="wifi_hints">请确定当前连接的wifi是cstorebp</string>
    <string name="now_wifi">当前链接的wifi为：</string>
    <string name="mobile_network">移动网络</string>
    <string name="not_wifi_name">未获得wifi名</string>
    <string name="usa_time">使用时间在每天14点到18点期间， \n如此时间内无数据请联系开发人员。</string>
    <string name="maxOrMinError">最大量或最小量数据异常</string>
    <string name="duplicateData">存在重复数据</string>
    <string name="all_sku">可订商品数</string>
    <string name="ord_qty">已订商品数</string>
    <string name="order_price">已订货金额</string>
    <string name="expected_count">预计强配：</string>
    <string name="on_the_way">在途：</string>
    <string name="tomorrow">明日预测：</string>
    <string name="shelf_name">货架名</string>
    <string name="no_edit_msg">无修改数据</string>
    <string name="self_value">自用品项目</string>
    <string name="nop_value">促销品及新品项目</string>
    <string name="promotion">促销品</string>
    <string name="loadingCall">请耐心等候操作完成，预计时间2分钟</string>
    <string name="with_loading">请耐心等候运行结束</string>
</resources>