<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/toolbar_layout"/>

        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">
                <ImageView
                    android:id="@+id/cimg"
                    android:layout_width="match_parent"
                    android:layout_height="330dp"/>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/commodify_id"/>

                    <TextView
                        android:id="@+id/cid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/commodify_name"/>

                    <TextView
                        android:id="@+id/cname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/money"/>

                    <TextView
                        android:id="@+id/cprice"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/tonightCount2"/>

                    <TextView
                        android:id="@+id/cnc"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/inventory2"/>

                    <TextView
                        android:id="@+id/cin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/min_count"/>

                    <TextView
                        android:id="@+id/min_count"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/max_count"/>

                    <TextView
                        android:id="@+id/max_count"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/each_add_count"/>

                    <TextView
                        android:id="@+id/each_add_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"/>
                </LinearLayout>

                <!--<TextView-->
                    <!--android:gravity="center"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="此处可放web页面或介绍一类，超出部分支持向下滑动"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"/>-->

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_weight="0.2"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <View
                android:layout_marginBottom="8dp"
                android:background="@color/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="right|center"
                android:orientation="horizontal">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/todayCount2"
                    android:textSize="20sp"/>

                <ImageButton
                    android:id="@+id/less_count"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shap_line"
                    android:src="@mipmap/ic_less"/>

                <TextView
                    android:gravity="center"
                    android:id="@+id/order_count"
                    android:layout_width="45dp"
                    android:background="@drawable/shap_line"
                    android:layout_height="30dp"
                    android:textSize="20sp"/>

                <ImageButton
                    android:background="@drawable/shap_line"
                    android:id="@+id/add_count"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/ic_add"/>

            </LinearLayout>

            <Button
                android:id="@+id/sure_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cstore_red"
                android:foreground="@drawable/selector_foreground"
                android:stateListAnimator="@drawable/lift_on_touch"
                android:elevation="1dp"
                android:text="@string/sure"
                android:clickable="true"
                android:textColor="@color/qinghe"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>

<include
    layout="@layout/loading_layout"/>


</FrameLayout>